plugins {
	id 'org.springframework.boot' version '3.2.2'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'java'
}

group = 'com.evento'
version = 'ev1.9.3'
java {
	targetCompatibility = "21"
	targetCompatibility = "21"
}


configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	mavenLocal()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.integration:spring-integration-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    compileOnly 'org.projectlombok:lombok'
	
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'com.google.code.gson:gson:2.10.1'

	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'org.postgresql:postgresql'

	testImplementation 'org.flywaydb:flyway-core'
	implementation 'com.squareup.okhttp3:okhttp:4.12.0'
	implementation 'com.auth0:java-jwt:4.4.0'


	implementation project(':evento-common')
	implementation project(':evento-parser')
}

tasks.register('prepareKotlinBuildScriptModel') {

}

test {
	useJUnitPlatform()
}